[package]
name = "todo"
version = "0.1.0"
edition = "2024"
authors = ["KhiemNguyen15"]
description = "A simple CLI todo app"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
directories = "6.0.0"
prettytable = "0.10.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
